# krait

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  flake.nix
krait-agent/: Cargo.toml  build.rs
krait-agent/src/: lib.rs  main.rs
krait-common/: Cargo.toml
krait-ebpf/: Cargo.toml
krait-ebpf/src/: main.rs
krait-tests/: Cargo.toml  README.md
krait-tests/src/: main.rs
tests/: README.md  client.priv  client.pub  server.priv  server.pub  wireguard.nix
tests/nixos/: wireguard.nix
